[package]
name = "unshorten"
version = "0.1.0"
edition = "2021"
authors = ["Andre Lew <me@aelew.com>"]
license = "MIT"
description = "A simple CLI tool for unshortening URLs."
readme = "README.md"
homepage = "https://github.com/aelew/unshorten"
repository = "https://github.com/aelew/unshorten"
keywords = ["cli", "unshortener", "url"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.3.19", features = ["derive"] }
reqwest = "0.11.18"
urlexpand = "0.2.3"
url = "2.4.0"
async-recursion = "1.0.4"
